--- a/style.css
+++ b/style.css
@@ -443,6 +443,20 @@ img.alignnone {
   .fixed--header.admin-bar .site-header {
     top: 32px; } }
 
+.hero-content-wrapper {
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.hero-content-inner {
+  padding: 50px 0; }
+
+.hero-content-inner .section-title::before {
+  border-top: 0; }
+
+.hero-content-inner .section-title {
+  font-size: 24px;
+  text-transform: uppercase; }
+
 /*Site Header*/
 .site-header {
   background-color: #222222; }
