--- a/assets/scss/_widget.scss
+++ b/assets/scss/_widget.scss
@@ -1,17 +1,49 @@
+// Hero Widget
 .hero-content-wrapper {
-  background-repeat: no-repeat;
   background-size: cover;
+  background: no-repeat fixed center center;
 }
 
 .hero-content-inner {
   padding: 50px 0;
+
+  .section-title {
+    font-size: 24px;
+    text-transform: uppercase;
+
+    &::before {
+      border-top: 0;
+    }
+  }
 }
 
-.hero-content-inner .section-title::before {
-  border-top: 0;
+// Intro Widget
+.section-intro {
+  padding: 30px 0;
+
+  h1 {
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 1.4;
+    font-weight: normal;
+    font-size: 50px;
+
+    > span {
+      color: #286090;
+    }
+  }
 }
 
-.hero-content-inner .section-title {
-  font-size: 24px;
-  text-transform: uppercase;
+// Section Call to Action
+.section-call-to-action {
+  background: #363F48;
+  padding: 70px 0;
+  color: #fff;
+
+  h2 {
+    font-size: 36px;
+    line-height: 1.5;
+    margin: 0;
+    padding: 0;
+  }
 }
