--- a/assets/scss/_widget.scss
+++ b/assets/scss/_widget.scss
@@ -1,49 +1,107 @@
 // Hero Widget
 .hero-content-wrapper {
-  background-size: cover;
-  background: no-repeat fixed center center;
+	background-size: cover;
+	background: no-repeat fixed center center;
 }
 
 .hero-content-inner {
-  padding: 50px 0;
+	padding: 50px 0;
 
-  .section-title {
-    font-size: 24px;
-    text-transform: uppercase;
+	.section-title {
+		font-size: 24px;
+		text-transform: uppercase;
 
-    &::before {
-      border-top: 0;
-    }
-  }
+		&::before {
+			border-top: 0;
+		}
+	}
 }
 
 // Intro Widget
 .section-intro {
-  padding: 30px 0;
+	padding: 30px 0;
 
-  h1 {
-    text-align: center;
-    text-transform: uppercase;
-    line-height: 1.4;
-    font-weight: normal;
-    font-size: 50px;
+	h1 {
+		text-align: center;
+		text-transform: uppercase;
+		line-height: 1.4;
+		font-weight: normal;
+		font-size: 50px;
 
-    > span {
-      color: #286090;
-    }
-  }
+		> span {
+			color: #286090;
+		}
+	}
 }
 
 // Section Call to Action
 .section-call-to-action {
-  background: #363F48;
-  padding: 70px 0;
-  color: #fff;
+	background: #363F48;
+	padding: 70px 0;
+	color: #fff;
 
-  h2 {
-    font-size: 36px;
-    line-height: 1.5;
-    margin: 0;
-    padding: 0;
-  }
+	h2 {
+		font-size: 36px;
+		line-height: 1.5;
+		margin: 0;
+		padding: 0;
+	}
+}
+
+// Featured Posts
+.section-featured-posts {
+	padding: 20px 0 50px;
+
+	.post-content {
+		padding: 15px;
+
+		h2 > a {
+			color: #000000;
+			font-size: 22px;
+
+			&:hover {
+				color: #333333;
+				text-decoration: none;
+			}
+		}
+	}
+
+	.grids {
+		&:before,
+		&:after {
+			display: table;
+			content: "";
+		}
+
+		&:after {
+			clear: both;
+		}
+	}
+
+	.homepage-featured-item {
+		background-color: #f5f5f5;
+	}
+
+	.section-cta {
+		display: block;
+		margin-bottom: 0;
+	}
+}
+
+// Recent Projects
+.section-recent-projects {
+	padding: 20px 0 50px;
+	background-color: #f5f5f5;
+
+	.section-title h1.title-wrapper {
+		background-color: #f5f5f5;
+	}
+
+	.hentry {
+		margin: 0;
+	}
+
+	.single-portfolio-item {
+		margin: 0 -15px;
+	}
 }
